# NatureScanner

./: .gitignore  CMakeLists.txt
components/NEO6/: CMakeLists.txt  NEO6.c  NEO6.h
main/: CMakeLists.txt  main.c
